@@ -1,3 +1,6 @@
+2011-09-23
+ * raiseHWError, clearHWError
+
 2011-09-22
  * initHardware method
 
